--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,59 @@
 .container {
-    width: auto;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: thistle;
+}
+
+
+.library{
+    text-align: center;
+    font-size: 100px;
+    background-color: royalblue;
+    color: skyblue;
+    height: 200px;
+    vertical-align: middle;
+    line-height: 200px;
+}
+
+.add-book-container {
+    text-align: center;
+    font-size: 100px;
+    color: skyblue;
+    height: 50px;
+    vertical-align: middle;
+}
+
+.btn {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.book-form {
+    padding: 12px 20px;
+        border: none;
+        background-color: #8ebf42;
+        color: #fff;
+        cursor: pointer;
+        width: 100%;
+        margin-bottom: 15px;
+        opacity: 0.8;
+}
+
+.form-container {
+    position: relative;
+        text-align: center;
+        width: 100%;
+}
+
+.hide {
+    display: none;
 }
 
 .book {
